feature(i18n): add button captions

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -3,5 +3,10 @@
     "event": {
       "newAppointmentTitle": "Neuer Termin"
     }
+  },
+  "button": {
+    "close": "schliessen",
+    "save": "speichern",
+    "cancel": "abbrechen"
   }
 }
