--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -3,5 +3,10 @@
     "event": {
       "newAppointmentTitle": "New Appointment"
     }
+  },
+  "button": {
+    "close": "close",
+    "save": "save",
+    "cancel": "cancel"
   }
 }
