feature(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -1,7 +1,9 @@
 {
   "calendar": {
     "event": {
-      "newAppointmentTitle": "Neuer Termin"
+      "newAppointmentTitle": "Neuer Termin",
+      "start": "Start",
+      "end": "Ende"
     }
   },
   "button": {
