feat(i18n): add error translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -13,5 +13,11 @@
   },
   "dict": {
     "for": "für"
+  },
+  "error": {
+    "prefix": "Es gab einen Fehler",
+    "event": {
+      "overlapping": "Überlappende Termine sind nicht erlaubt. Bitte Termin anpassen"
+    }
   }
 }
