feat(i18n): add edit event title translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -2,6 +2,7 @@
   "calendar": {
     "event": {
       "newAppointmentTitle": "Neuer Termin",
+      "editAppointmentTitle": "Termin",
       "title": "Title",
       "duration": "Dauer",
       "homeVisit": "Hausbesuch",
