feat(i18n): add button strings

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -20,7 +20,9 @@
     "close": "schliessen",
     "save": "speichern",
     "cancel": "abbrechen",
-    "preview": "Vorschau"
+    "preview": "Vorschau",
+    "edit": "bearbeiten",
+    "delete": "löschen"
   },
   "dict": {
     "for": "für"
