--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -20,7 +20,9 @@
     "close": "close",
     "save": "save",
     "cancel": "cancel",
-    "preview": "preview"
+    "preview": "preview",
+    "edit": "edit",
+    "delete": "delete"
   },
   "dict": {
     "for": "for"
