feat(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -4,6 +4,7 @@
       "newAppointmentTitle": "Neuer Termin",
       "editAppointmentTitle": "Termin",
       "title": "Title",
+      "patient": "Patient",
       "duration": "Dauer",
       "homeVisit": "Hausbesuch",
       "recurringAppointment": "Terminserie",
