--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -4,6 +4,7 @@
       "newAppointmentTitle": "New Appointment",
       "editAppointmentTitle": "Termin",
       "title": "title",
+      "patient": "patient",
       "duration": "duration",
       "homeVisit": "home visit",
       "recurringAppointment": "recurring Appointment",
