feat(i18n): add cancelEvent button caption

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -21,6 +21,7 @@
     "close": "schliessen",
     "save": "speichern",
     "cancel": "abbrechen",
+    "cancelEvent": "absagen",
     "preview": "Vorschau",
     "edit": "bearbeiten",
     "delete": "löschen"
