feat(client): add diagnostic to event

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -7,6 +7,7 @@
       "patient": "Patient",
       "duration": "Dauer",
       "homeVisit": "Hausbesuch",
+      "diagnostic": "Diagnose",
       "recurringAppointment": "Terminserie",
       "frequency": "Frequenz",
       "frequencyWeekly": "1 x pro Woche",
