--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -7,6 +7,7 @@
       "patient": "patient",
       "duration": "duration",
       "homeVisit": "home visit",
+      "diagnostic": "diagnostic",
       "recurringAppointment": "recurring Appointment",
       "frequency": "frequency",
       "frequencyWeekly": "weekly",
