feat(settings): new client route

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -46,7 +46,8 @@
     "teamSettings": "Team",
     "employeeSettings": "Mitarbeiter",
     "profile": "Profil",
-    "logout": "abmelden"
+    "logout": "abmelden",
+    "settings": "Einstellungen"
   },
   "patients": {
     "firstName": "Vorname",
