--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -46,7 +46,8 @@
     "teamSettings": "Team",
     "employeeSettings": "Employees",
     "profile": "Profile",
-    "logout": "logout"
+    "logout": "logout",
+    "settings": "settings"
   },
   "patients": {
     "firstName": "first name",
