feat(i18n): add eventSettings key to menu

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -47,7 +47,8 @@
     "employeeSettings": "Mitarbeiter",
     "profile": "Profil",
     "logout": "abmelden",
-    "settings": "Einstellungen"
+    "settings": "Einstellungen",
+    "eventSettings": "Termine"
   },
   "patients": {
     "firstName": "Vorname",
