feat(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -69,6 +69,7 @@
     "telephoneNumber": "Telefon",
     "mailAddress": "eMail",
     "actions": "Actions",
-    "diagnostic": "Diagnostik"
+    "diagnostic": "Diagnostik",
+    "careFacility": "Einrichtung"
   }
 }
