--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -70,6 +70,7 @@
     "telephoneNumber": "telephone",
     "mailAddress": "email",
     "actions": "Actions",
-    "diagnostic": "diagnostic"
+    "diagnostic": "diagnostic",
+    "careFacility": "care facility"
   }
 }
