feat(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -66,6 +66,7 @@
     "isAddpayFreed": "befreit?",
     "notices": "Notizen",
     "firstContactAt": "Datum der Anmeldung",
+    "isWaitingSince": "wartet seit",
     "telephoneNumber": "Telefon",
     "mailAddress": "eMail",
     "actions": "Actions",
