--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -67,6 +67,7 @@
     "isAddpayFreed": "freed?",
     "notices": "notices",
     "firstContactAt": "Date of reception",
+    "isWaitingSince": "waiting since",
     "telephoneNumber": "telephone",
     "mailAddress": "email",
     "actions": "Actions",
