feat(i18n): update term

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -12,7 +12,7 @@
       "patient": "Patient",
       "duration": "Dauer",
       "homeVisit": "Hausbesuch",
-      "diagnostic": "Diagnose",
+      "diagnostic": "Diagnostik",
       "recurringAppointment": "Terminserie",
       "frequency": "Frequenz",
       "frequencyWeekly": "1 x pro Woche",
