feat(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -53,7 +53,8 @@
     "profile": "Profil",
     "logout": "abmelden",
     "settings": "Einstellungen",
-    "eventSettings": "Termine"
+    "eventSettings": "Termine",
+    "doctors": "Ärzte"
   },
   "label": {
     "firstName": "Vorname",
