feat(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -51,6 +51,7 @@
     "waitingList": "Warteliste",
     "teamSettings": "Team",
     "employeeSettings": "Mitarbeiter:in",
+    "userSettings": "User",
     "profile": "Profil",
     "logout": "abmelden",
     "settings": "Einstellungen",
