--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -51,6 +51,7 @@
     "waitingList": "Waiting List",
     "teamSettings": "Team",
     "employeeSettings": "Employees",
+    "userSettings": "User",
     "profile": "Profile",
     "logout": "logout",
     "settings": "settings",
