feat(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -17,6 +17,7 @@
       "recurringAppointment": "Terminserie",
       "frequency": "Frequenz",
       "frequencyWeekly": "1 x pro Woche",
+      "frequencyBiWeekly": "jede 2. Woche",
       "frequencyMonthly": "1 x pro Monat",
       "interval": "Intervall",
       "start": "Start",
