--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -17,6 +17,7 @@
       "recurringAppointment": "recurring Appointment",
       "frequency": "frequency",
       "frequencyWeekly": "weekly",
+      "frequencyBiWeekly": "bi-weekly",
       "frequencyMonthly": "monthly",
       "interval": "interval",
       "start": "start",
