feat(Modal): implement Note

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -7,6 +7,7 @@
       "month": "Monat"
     },
     "event": {
+      "noteTitle": "📝 Notiz",
       "newAppointmentTitle": "Neuer Termin",
       "editAppointmentTitle": "Termin",
       "title": "Title",
