chore(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -10,7 +10,8 @@
       "noteTitle": "📝 Notiz",
       "newAppointmentTitle": "Neuer Termin",
       "editAppointmentTitle": "Termin",
-      "title": "Title",
+      "title": "Titel",
+      "text": "Text",
       "patient": "Patient",
       "duration": "Dauer",
       "homeVisit": "Hausbesuch",
