--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -8,7 +8,8 @@
     },
     "event": {
       "newAppointmentTitle": "New Appointment",
-      "editAppointmentTitle": "Termin",
+      "editAppointmentTitle": "Appointment",
+      "text": "text",
       "title": "title",
       "patient": "patient",
       "duration": "duration",
