feat(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -72,8 +72,9 @@
     "street": "Straße",
     "city": "Ort",
     "isAddpayFreed": "befreit?",
+    "hasContract": "Vertrag?",
     "notices": "Notizen",
-    "firstContactAt": "Datum der Anmeldung",
+    "firstContactAt": "Anmeldedatum",
     "isWaitingSince": "wartet seit",
     "telephoneNumber": "Telefon",
     "mailAddress": "eMail",
