chore(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -61,7 +61,8 @@
     "logout": "abmelden",
     "settings": "Einstellungen",
     "eventSettings": "Termine",
-    "doctors": "Ärzt:in"
+    "doctors": "Ärzt:in",
+    "institutions": "Einrichtungen"
   },
   "label": {
     "firstName": "Vorname",
