chore(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -89,7 +89,8 @@
     "therapist": "Behandler:in",
     "date": "Datum",
     "appointments": "Termine",
-    "no": "keine"
+    "no": "keine",
+    "institution": "Einrichtung"
   },
   "auth": {
     "login": "anmelden",
