--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -88,7 +88,8 @@
     "therapist": "therapist",
     "date": "date",
     "appointments": "Appointments",
-    "no": "no"
+    "no": "no",
+    "institution": "Institution"
   },
   "auth": {
     "login": "login",
