--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -105,6 +105,7 @@
     "newPassword": "neues Passwort",
     "forgotPassword": "Passwort vergessen? Klick hier!",
     "resetPassword": "Passwort zurücksetzen",
-    "reset": "zurücksetzen"
+    "reset": "zurücksetzen",
+    "notYetAuthorized": "Du hast Dich erfolgreich registriert, aber Dein account ist noch nicht freigeschaltet."
   }
 }
