chore(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -90,7 +90,10 @@
     "date": "Datum",
     "appointments": "Termine",
     "no": "keine",
-    "institution": "Einrichtung"
+    "institution": "Einrichtung",
+    "employeeProfile": "Mitarbeiterprofil",
+    "employeeSelect": "Mitarbeiter:in auswählen",
+    "contractData": "Vertragsdaten"
   },
   "auth": {
     "login": "anmelden",
