chore(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -84,6 +84,7 @@
     "mailAddress": "eMail",
     "actions": "Actions",
     "diagnostic": "Diagnostik",
+    "medicalReport": "Befund",
     "careFacility": "Einrichtung",
     "doctor": "Ärzt:in",
     "therapist": "Behandler:in",
