--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -66,6 +66,8 @@
   },
   "label": {
     "name": "name",
+    "user": "user",
+    "alias": "alias",
     "description": "description",
     "firstName": "first name",
     "lastName": "last name",
@@ -93,7 +95,13 @@
     "institution": "Institution",
     "employeeProfile": "Employee Profile",
     "employeeSelect": "select employee",
-    "contractData": "contract data"
+    "contractData": "contract data",
+    "newPermission": "new permission",
+    "currentPermissions": "current permissions",
+    "validUntil": "valid until",
+    "bgColor": "color",
+    "hoursPerWeek": "hours per week",
+    "appointmentsPerWeek": "appointments per week"
   },
   "auth": {
     "login": "login",
