chore(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -6,6 +6,11 @@
       "week": "Woche",
       "month": "Monat"
     },
+    "option": {
+      "label": "Eingabe",
+      "appointments": "Termine",
+      "leave": "Abwesenheit"
+    },
     "event": {
       "noteTitle": "📝 Notiz",
       "newAppointmentTitle": "Neuer Termin",
@@ -25,6 +30,16 @@
       "start": "Start",
       "end": "Ende",
       "previewRecurringApointments": "Vorschau Terminserie"
+    },
+    "leave": {
+      "type": {
+        "sick": "Krank",
+        "sickChild": "Kind Krank",
+        "paidVacation": "Urlaub",
+        "unpaidLeave": "unbez. Urlaub",
+        "parentalLeave": "Elternzeit",
+        "special": "special"
+      }
     }
   },
   "button": {
