chore(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -39,6 +39,9 @@
         "unpaidLeave": "unbez. Urlaub",
         "parentalLeave": "Elternzeit",
         "special": "special"
+      },
+      "status": {
+        "requested": "beantragt"
       }
     }
   },
