--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -38,6 +38,9 @@
         "unpaidLeave": "unpaid leave",
         "parentalLeave": "parental leave",
         "special": "special leave"
+      },
+      "status": {
+        "requested": "requested"
       }
     }
   },
