chore(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -56,8 +56,16 @@
     "archive": "archivieren",
     "activate": "aktivieren"
   },
+  "time": {
+    "ofDay": {
+      "morning": "Morgen",
+      "day": "Tag",
+      "evening": "Abend"
+    }
+  },
   "dict": {
-    "for": "für"
+    "for": "für",
+    "good": "Guten"
   },
   "error": {
     "prefix": "Es gab einen Fehler",
