--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -55,8 +55,16 @@
     "archive": "archive",
     "activate": "activate"
   },
+  "time": {
+    "ofDay": {
+      "morning": "morning",
+      "day": "day",
+      "evening": "evening"
+    }
+  },
   "dict": {
-    "for": "for"
+    "for": "for",
+    "good": "Good"
   },
   "error": {
     "prefix": "There was an error",
