chore(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -131,6 +131,7 @@
     "contractData": "Vertragsdaten",
     "newPermission": "neue Berechtigung",
     "currentPermissions": "aktuelle Berechtigungen",
+    "currentTeams": "aktuelle Teams",
     "validUntil": "gültig bis",
     "bgColor": "Farbe",
     "hoursPerWeek": "Std. pro Woche",
