chore(i18n): add translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -136,7 +136,8 @@
     "validUntil": "gültig bis",
     "bgColor": "Farbe",
     "hoursPerWeek": "Std. pro Woche",
-    "appointmentsPerWeek": "Therapien pro Woche"
+    "appointmentsPerWeek": "Therapien pro Woche",
+    "birthday": "Geburtstag"
   },
   "auth": {
     "login": "anmelden",
