--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -78,6 +78,11 @@
     "prefix": "Es gab einen Fehler",
     "event": {
       "overlapping": "Überlappende Termine sind nicht erlaubt. Bitte Termin anpassen"
+    },
+    "api": {
+      "token_wrong_or_expired": "Link falsch oder abgelaufen. Bitte fordere einen neuen Link an.",
+      "invalid_old_password": "das alte passwort ist ungültig",
+      "could_not_update_user": "user konnte nicht aktualisiert werden"
     }
   },
   "menu": {
