--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -141,7 +141,9 @@
     "bgColor": "color",
     "hoursPerWeek": "hours per week",
     "appointmentsPerWeek": "appointments per week",
-    "birthday": "birthday"
+    "birthday": "birthday",
+    "room": "room",
+    "noRoom": "no room"
   },
   "auth": {
     "login": "login",
