chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -93,7 +93,7 @@
     "roomCalendar": "Raumbelegung",
     "patients": "Patient:in",
     "waitingList": "Warteliste",
-    "teamSettings": "Team",
+    "teamSettings": "Teamübersicht",
     "employeeSettings": "Mitarbeiter:in",
     "userSettings": "User",
     "profile": "Profil",
