chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -91,6 +91,7 @@
     "personalData": "Persönliche Daten",
     "teamCalendar": "Team",
     "roomCalendar": "Raumbelegung",
+    "roomCalendarLive": "Räume",
     "patients": "Patient:in",
     "waitingList": "Warteliste",
     "teamSettings": "Teamübersicht",
