--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -90,6 +90,7 @@
     "personalData": "Personal Data",
     "teamCalendar": "Team",
     "roomCalendar": "Roombookings",
+    "roomCalendarLive": "Rooms",
     "patients": "Patients",
     "waitingList": "Waiting List",
     "teamSettings": "Team",
