chore(i18n): update translations

--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -59,7 +59,8 @@
     "edit": "edit",
     "delete": "delete",
     "archive": "archive",
-    "activate": "activate"
+    "activate": "activate",
+    "add": "add"
   },
   "time": {
     "ofDay": {
