--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -60,7 +60,8 @@
     "edit": "bearbeiten",
     "delete": "löschen",
     "archive": "archivieren",
-    "activate": "aktivieren"
+    "activate": "aktivieren",
+    "add": "hinzufügen"
   },
   "time": {
     "ofDay": {
